test/errors/traits/instance_not_found/main.sk
module Main {

struct Foo {

}

trait Bar[T] {
    fn bar(self) -> ()
}

fn main() {
    let f = Foo();
    f.bar();
}

}